<resources>
    <string name="app_name">멘투멘</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">멘투멘</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_dauth_login">DAUTH 로그인</string>
    <string name="text_login">로그인</string>
    <string name="password">도담도담 PW</string>
    <string name="id">도담도담 ID</string>
    <string name="comment">댓글을 입력해주세요.</string>
    <string name="server">Server</string>
    <string name="android">Android</string>
    <string name="web">Web</string>
    <string name="design">Design</string>
    <string name="todo">TODO</string>
    <string name="ios">iOS</string>
    <string name="point">·</string>
    <string name="logout">로그아웃</string>
    <string name="text1">님, 환영합니다!</string>
    <string name="write_text">글쓰기</string>
    <string name="help">멘토에게 부탁할 내용을 입력하세요.</string>
    <string name="post">멘토 요청하기</string>
    <string name="auto_login">자동 로그인</string>
    <string name="mento">멘토 요청</string>
    <string name="home">홈</string>
    <string name="user">마이</string>
    <string name="add">등록</string>
    <string name="edit_text">글수정</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="commentContent">님이 회원님의 게시글에 댓글을 남겼습니다</string>
    <string name="notice">알림</string>
    <string name="search">검색</string>
</resources>