<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginActivity">

    <data>
        <variable
            name="vm"
            type="kr.hs.dgsw.b1nd.mentomen.view.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="220dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/regular"
                    android:hint="@string/id"
                    android:inputType="text"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pw"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:inputType="textPassword"
                    android:digits="0123456789_qwertzuiopasdfghjklyxcvbnm~!@#$%^*()-QWERTYUIOPASDFGHJKLZXCVBNM"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_login"
                android:fontFamily="@font/regular"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_radius"
                android:text="@string/text_login"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/regular"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_pw" />
        </LinearLayout>
    </ScrollView>
</layout>