<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.home.HomeFragment">

    <data>
        <variable
            name="vm"
            type="kr.hs.dgsw.b1nd.mentomen.view.home.HomeViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/logo"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                android:src="@drawable/logo_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_serach"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_notification"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_notification"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fitsSystemWindows="true"
                app:elevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/design"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="10dp"
                        android:translationZ="2dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/web"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_design"
                            designButtonState="@{vm.tagState}"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:background="@drawable/tag_radius"
                            android:backgroundTint="@color/design"
                            android:fontFamily="@font/regular"
                            android:text="@string/design"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/web"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:translationZ="2dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/design"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/android">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_web"
                            webButtonState="@{vm.tagState}"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:background="@drawable/tag_radius"
                            android:backgroundTint="@color/web"
                            android:fontFamily="@font/regular"
                            android:text="@string/web"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/android"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/background"
                        android:translationZ="2dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="4dp"
                        android:layout_marginStart="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/web"
                        app:layout_constraintEnd_toStartOf="@id/server">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_android"
                            androidButtonState="@{vm.tagState}"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:background="@drawable/tag_radius"
                            android:backgroundTint="@color/android"
                            android:fontFamily="@font/regular"
                            android:text="@string/android"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/server"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:translationZ="2dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="4dp"
                        android:layout_marginStart="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/android"
                        app:layout_constraintEnd_toStartOf="@id/ios">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_server"
                            serverButtonState="@{vm.tagState}"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:background="@drawable/tag_radius"
                            android:backgroundTint="@color/server"
                            android:fontFamily="@font/regular"
                            android:text="@string/server"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/ios"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:translationZ="2dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="4dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/server"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_ios"
                            iosButtonState="@{vm.tagState}"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:background="@drawable/tag_radius"
                            android:backgroundTint="@color/iOS"
                            android:fontFamily="@font/regular"
                            android:text="@string/ios"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/refresh_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="?attr/actionBarSize"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingBottom="?attr/actionBarSize"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
